[project]
name = "plausible-daily-report"
version = "1.0.0"
description = "Fetch analytics data from Plausible Analytics with a lightweight Python SDK and CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Plausible Daily Report Contributors"}
]
keywords = ["plausible", "analytics", "stats", "api", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[project.urls]
Repository = "https://github.com/autonomica-xyz/plausible-daily-report"

[project.scripts]
plausible-stats = "fetch_stats:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["plausible_sdk.py", "fetch_stats.py"]
